@@ -7,7 +7,151 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\subsection{Foo}
+\section{Automatic Graph Drawing}
+\label{section-library-graphdrawing-algorithms}
+
+{\emph{by Jannis Pohlmann}}
+
+\begin{tikzlibrary}{graphdrawing}
+  This package needs to be loaded in order to use any of the automatic
+  graph drawing algorithms described in this chapter. It provides the
+  \emph{Lua}-based graph drawing framework as well as a number of 
+  generic \tikzname\ options to adjust the generated graph drawings.
+  The individual graph drawing algorithms are located in their own
+  libraries and have to be loaded separately.
+\end{tikzlibrary}
+
+\subsection{Orientation of Graph Drawings}
+
+The drawing computed for a graph may be pleasing in general but some
+algorithms like the |spring| algorithm show the tendency to generate
+slightly rotated drawings. Also, if several graphs are defined in a
+single |{tikzpicture}| then these will possibly overlap.
+As a consequence, a postprocessing step may be necessary to adjust the
+orientation of the graph drawing. This can be achieved in a relatively
+simple way using the options described in the following.
+
+\begin{key}{/tikz/orientation=\meta{colon-separated list}}
+  With graph drawing algorithms it makes sense with, the |graphdrawing|
+  library will, by default and in a postprocessing step, attempt to
+  detect the principal axis of the graph automatically and will adjust
+  its orientation so that it is parallel to the $x$ axis.
+
+  This behavior may be altered by setting |orientation| using one of
+  the following notations:
+  |(|\meta{first axis node}|):(|\meta{second axis node}|)| specifies
+  two nodes that together define the axis of the graph drawing. The
+  drawing is then rotated so that this axis is parallel to the $x$
+  axis.
+  \begin{codeexample}[]
+\tikz \graph [experimental layout,orientation=(a):(c)] {
+  a -- { b, c }
+};
+  \end{codeexample}
+  \begin{codeexample}[]
+\tikz \graph [experimental layout,orientation=(c):(a)] {
+  a -- { b, c }
+};
+  \end{codeexample}
+  The angle to the $x$ axis can be changed easily by using the
+  |(|\meta{first axis node}|):|\meta{angle}|:(|\meta{second axis node}|)|
+  syntax to define an axis with a specific angle.
+  \begin{codeexample}[]
+\tikz \graph [experimental layout,orientation=(a):90:(c)] {
+  a -- { b, c}
+};
+  \end{codeexample}
+  \begin{codeexample}[]
+\tikz \graph [experimental layout,orientation=(a):120:(b)] {
+  a -- b
+};
+  \end{codeexample}
+\end{key}
+
+\begin{key}{/tikz/desired at=\meta{coordinate}}
+  % TODO: Sets a desired position for the node. In a postprocessing
+  % step, the graphdrawing library attempts to move the entire graph 
+  % so that the first node with a |desired at| option is moved to
+  % its desired location.
+\end{key}
+
+%\subsection{Packing of Connected Components}
+%
+%Graphs may be composed of subgraphs or \emph{components} that are not
+%connected to each other. In order to draw these nicely, the 
+%|graphdrawing| library splits them up into separate graphs, computes
+%their layouts with the same graph drawing algorithm independently and,
+%in a postprocessing step, arranges them in a non-uniform grid in the 
+%final drawing. This is called \emph{component packing}.
+%
+%The following options can be used to configure the order and placement
+%strategy during component packing.
+%
+%\begin{key}{/tikz/component packing=\marg{options}}
+%  Executes the \meta{options} with the path prefix 
+%  |/tikz/component packing|.
+%  
+%  Defines how to arrange the connected components of the graph after 
+%  their individual drawings have been computed.
+%\end{key}
+%
+%\begin{key}{/tikz/component packing/layered=\opt{\meta{boolean}} (default true, initially true)}
+%  |layered| arranges the different components in a non-uniform grid
+%  starting in the top left corner. Components are placed in these 
+%  layers in descending order of their size.
+%  \begin{codeexample}[]
+%\tikz \graph [experimental layout,component packing={layered}] {
+%  a -- b -- c -- a,
+%  d -- e -- d,
+%  g
+%};
+%  \end{codeexample}
+%\end{key}
+%
+%\begin{key}{/tikz/component packing/centered=\opt{\meta{boolean}} (default true, initially false)}
+%  If set to |true|, arranges the different components clockwise in a 
+%  non-uniform grid starting at the center. Components are placed in 
+%  descending order of their size.
+%  \begin{codeexample}[]
+%\tikz \graph [experimental layout,component packing={centered}] {
+%  a -- b -- c -- a,
+%  d -- e -- d,
+%  g
+%};
+%  \end{codeexample}
+%\end{key}
+%
+%\begin{key}{/tikz/component packing/padding=\meta{dimension} (initially 0pt)}
+%  Defines how much padding is used to separate the connected 
+%  components.
+%  \begin{codeexample}[]
+%\tikz \graph [experimental layout,component packing={centered,padding=10pt}] {
+%  a -- b -- c -- a,
+%  d -- e -- d,
+%  g
+%};
+%  \end{codeexample}
+%\end{key}
+%
+%
+%\section{The Spring and Spring-Electrical Drawing Algorithms}
+%
+%\subsection{Overview}
+%
+%\subsection{Common Options}
+%
+%\subsection{Options for the Spring Algorithm}
+%
+%\subsection{Options for the Spring-Electrical Algorithm}
+%
+%% TODO
+%% Explain the following concepts:
+%% - separation of graph drawing options and regular TikZ options
+%% - generic graph drawing options:
+%%   - component packing
+%%   - orientation
+%% - pre-defined graph drawing styles
+%% - graph drawing options for fine-tuning the different algorithms
 
 %%% Local Variables: 
 %%% mode: latex
