@@ -156,31 +156,53 @@
 
 
 %
-% Example of how to register graph, node and edge keys 
-% as well as how to create graph, node and edge styles.
+% General options for changing the orientation and component packing
+% of graph drawings.
 %
 \tikzgraphsset{
-  graph drawing/register node key=my dummy node key,
-  graph drawing/register node math key=my dummy node math key,
-  graph drawing/register edge key=my dummy edge key,
-  graph drawing/register edge math key=my dummy edge math key,
-  % Graph style
-  my dummy tree/.style={
+  graph drawing/register key=orientation,
+}
+
+
+
+%
+% Experimental layout style for trying new ideas.
+%
+\tikzgraphsset{
+  experimental layout/.style={
     graph drawing engine,
-    algorithm=whetherelltree
-  },
-  % Node style
-  my dummy node/.style={
-    my dummy node key=foo,
-    fill=yellow
-  },
-  % Edge style (needs to registered differently)
-  graph drawing/register edge style={%
-    my dummy edge/.style={
-      color=blue,
-      my dummy edge math key=2cm
-    }
+    algorithm=experimental,
   }
 }
+
+
+
+%%
+%% Example of how to register graph, node and edge keys 
+%% as well as how to create graph, node and edge styles.
+%%
+%\tikzgraphsset{
+%  graph drawing/register node key=my dummy node key,
+%  graph drawing/register node math key=my dummy node math key,
+%  graph drawing/register edge key=my dummy edge key,
+%  graph drawing/register edge math key=my dummy edge math key,
+%  % Graph style
+%  my dummy tree/.style={
+%    graph drawing engine,
+%    algorithm=whetherelltree
+%  },
+%  % Node style
+%  my dummy node/.style={
+%    my dummy node key=foo,
+%    fill=yellow
+%  },
+%  % Edge style (needs to registered differently)
+%  graph drawing/register edge style={%
+%    my dummy edge/.style={
+%      color=blue,
+%      my dummy edge math key=2cm
+%    }
+%  }
+%}
 
 \endinput
