@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add experimental layout style. Document the orientation option.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add utility for adjusting the orientation of a graph. Update vector
 	class.
 
